--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- The Modal -->
+    <div id="winModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Message from the Game Bot</h3>
+            </div>
+            <div class="modal-body">
+                <p>You won! </p>
+                <p>Winner Winner Chicken Dinner!</p>
+            </div>
+            <div class="modal-footer">
+                <button class="playAgain">OK Thanks!</button>
+            </div>
+        </div>
+    </div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
